<resources>
    <string name="app_name">Curriculum Vitae</string>
    <string name="edittext_person_name">Terezija Umiljanović</string>
    <string name="high_school_name">2012-2016 Isidor Krsnjavi High School Nasice</string>
    <string name="faculty_name">2016- Faculty of Electrical Engineering, Computer Science and Information Technology Osijek</string>
    <string name="skill_1_name">Monopoly</string>
    <string name="skill_2_name">Risk</string>
    <string name="skill_3_name">Catan</string>
    <string name="skill_5_name">Drzava/Grad/selo</string>
    <string name="skill_4_name">Scotland Yard</string>
    <string name="email_edittext">tumiljanovic@etfos.hr</string>
    <string name="location_edittext">Osijek</string>
    <string name="education">EDUCATION</string>
    <string name="skills">SKILLS</string>
    <string name="about_me">ABOUT ME</string>
    <string name="experience">EXPERIENCE</string>
    <string name="interests">INTERESTS</string>
    <string name="social">SOCIAL</string>
    <string name="contact">CONTACT</string>
    <string name="mobile_number">123 456 7890</string>
    <string name="about_me_text">Hi, my name is Terezija. I am 21 year old sophomore. I am relatively new in technology world and I probably don\'t have enough experience but am willing to discover and accept new ideas which can be put into practice effectively. I have a creative mind and am always up for new challenges. I am able to motivate and direct my talents and skills to reach goals. I consider myself hardworking, reliable, helpful, organised, friendly and honest.</string>
    <string name="experience_text">C, C++, C#, java... to be continued :) It looks better and smarter when it is filled with text, soooooooo dkslajd jdskalj dsj ejrjd jd saj ejk sdalj jdska jdjlsadsjka jdksjajie jekdsa iejea dsklaj jdksajjdskja dskajdkjakdjkadj jsad jslak djlsak dlaj dsjaj dslajdncjdk jdflsfjfkdjsfjdsjf jfdks fj fdjks fds fdlsjdksjajdls dsajdj jjkfd jdska iiere f dskjke jlsd je šdfćds lf dskf ds kfdlskfoeksld kfoedlsk fd kk kfdksl kfdsčsakjdklsaj</string>
    <string name="skype_name">terezija umiljanovic</string>
    <string name="twitter_account">don\'t have it</string>
    <string name="facebook_account">https://www.facebook.com/terezija.umiljanovic</string>
</resources>
